// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#getPolygonPattern() render pattern 2 (cross) color and (light blue) opacity 1`] = `
<canvas
  data-snapshot-image="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABmJLR0QA/wD/AP+gvaeTAAABKElEQVQ4jZ3UQUrDUBDG8f/kGUohyQEUpS2CrtwKZuPWRdNV7+DpCkbEExRxL64Eg+AFmm7apHkuNJIa00w6yzD58b6XyQhhdItlySaLeX5csE9dTz3ydYS1gQOkCB4H7pgw8jtjYeSTrSZYGwCpg9u7Q2QB+FgmXN4EnU4mMv55d0me3RuS1zWji3dsMQB8xAw5HCV8vq20MatXZgA6ow0YgPlt0qI7sG1Qg7ZgAKKO1PeKNqwZ/IsiORQWxG2bWfPfw+34nGO5AnsC9oNNPtv1AziNYK3LUbV3iCwWij0j1z/KjF7/RTOndbBpNJRzalRYWQrUqDElajphClQ6Yy1XZDg6nQIB34s25ukhVWHlSY/PEmCI4OOYgUNlOTKP9VhZ8zitLukvrS9K3yr02NEAAAAASUVORK5CYII="
  height="20"
  width="20"
/>
`;

exports[`#getPolygonPattern() render pattern 3 (diagonal line from bottom-left tot top-right) with color (light blue) and opacity 1`] = `
<canvas
  data-snapshot-image="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABmJLR0QA/wD/AP+gvaeTAAAApUlEQVQ4ja3UvQ3CMBiE4deSS8xA0LAApqJjSUzhGbJOQhNMFIpEioD82J99Azy6a05xsDe64Kh8jTSn6473y9L3e43iTuUbMXa0htBawACNEkM/zeh50gUnB2cwKl/LwAUMIB1cwdLBDSwNjMDiwUgsDkzAtsFEbB0UYMugEJsHM7B/MBP7BgtgE1gIG8CCGIAmtBfGc0Thcs9WA2Zs9sjChqXnDztL4Jv7WOXKAAAAAElFTkSuQmCC"
  height="20"
  width="20"
/>
`;

exports[`#getPolygonPattern() render pattern 4 (diagonal line from top-left to bottom-right) with color (light blue) and opacity 1`] = `
<canvas
  data-snapshot-image="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABmJLR0QA/wD/AP+gvaeTAAAA30lEQVQ4ja3UPQ4BURSG4ffOIRp3FiCRMAqdVjGNVmFU9mBvKhRajcIGJBKJScQG0Bg/V4NE/M3cma865xRPTvUp/KCP4cDlNGI+2WGbVq/IOQocYI+iSC7fwQ+0NTgdHDBmLNQaa8y1ArgYPEpeyHZ1tEI3y0gIFxHeE9UoqaZBBSBLVJ5TRqi8bBmg8nZJib6DKdHPYAr0O2iJ/gYt0P9gQjQemACND8ZEk4Ex0OTgH1RZgY/cSxVj3EdJC36g2Swj60/L9RCootA4UnEwdGm2XesvZ6M9+cIQpXaAvgH5/sBe6ItkwwAAAABJRU5ErkJggg=="
  height="20"
  width="20"
/>
`;
